@@ -4,6 +4,8 @@ Current:
   * Corrected some scrolling bugs.
   * Integrals should now always be saved correcly.
   * Markdown: Block quote support
+  * Better detection for the case that the maxima process has been killed by the
+    operating system
   * More unicode characters in the symbols pane
 
 16.04:
